Bug 45879 - VIEWING: Selected Glue Point no longer highlighted
Summary: VIEWING: Selected Glue Point no longer highlighted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
3.5.0 Beta3
Hardware: All All
: medium minor
Assignee: Michael Meeks
URL:
Whiteboard: bibisected35 target:4.1.0 target:4.0....
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-02-10 03:14 UTC by Rainer Bielefeld Retired
Modified: 2013-04-10 05:45 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Document (9.03 KB, application/vnd.oasis.opendocument.graphics)
2012-02-10 04:24 UTC, Rainer Bielefeld Retired
Details
selection is far too faint if there at all ... (22.42 KB, image/png)
2013-02-25 17:25 UTC, Michael Meeks
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-02-10 03:14:22 UTC
Seldcted glue points should be highlighted as they are in 3.4, so that user can see for what glue point further actions will be done

Steps to reproduce:
1. Open attached "sample0.odg"
2. Click rectangle
3. Menu 'Edit -> Glue Points' (if necessary)
   > 2 additional glue points become visible on bottom line
4. click on the right additional glue point
   Expected: highlighted or something similar
   Actual: nothing, selection not visible
5. Press <Del>: selected  right additional glue point disappears

Was OK with 3.4.5 and with Server installation of Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI [(Build ID:  d3d1481-3f8994a-2ba0a9f)]" (11-09-09)

[Reproducible] with Server installation of  Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) GERMAN UI [Build ID: 130028f-b211287-090bcba-45cf606-05891e7]" Win-x86@9-Voreppe - 11-11-30)
Comment 1 Rainer Bielefeld Retired 2012-02-10 04:24:05 UTC
Created attachment 56860 [details]
Sample Document
Comment 2 sasha.libreoffice 2012-05-17 05:12:03 UTC
Thanks for bugreport
reproduced in 3.5.3 on Fedora 64 bit and in 3.5.0 beta 3 on Windows XP
(not reproduced in 3.4.2 on XP)
Changing version to 3.5.0 as most early reproduced
Comment 3 Korrawit Pruegsanusak 2012-05-30 04:21:25 UTC
git bisect start
# bad: [4c30602f43475389f81b1d981ce8ee9a3410b9d9] source-hash-85c6244b85b29c1d2bb9d89b62e9512dd65378b5
git bisect bad 4c30602f43475389f81b1d981ce8ee9a3410b9d9
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect good 65fd30f5cb4cdd37995a33420ed8273c0a29bf00
# good: [2faf4bc12ab490370d2196dedbc8091f9b09d0a5] source-hash-418a35f4861e863feb39eec73f4a39a87fbcb1f3
git bisect good 2faf4bc12ab490370d2196dedbc8091f9b09d0a5
# bad: [b6fca7e58854bc617c5fc9a75d1c1720b0d7e1a4] source-hash-ce60138d339a5eb2a174a5d27063249acf2cac42
git bisect bad b6fca7e58854bc617c5fc9a75d1c1720b0d7e1a4
# good: [0a28a62d53e996cf66d86e9bfb63ddc6ade75b7e] source-hash-71cbcb62028295a98ceee60cb4c4ee425bafcd2e
git bisect good 0a28a62d53e996cf66d86e9bfb63ddc6ade75b7e
# good: [9625329ea5a7e3e8475cd21c07726beec20573bd] source-hash-2d19e9bb07ccff3134f855812dddfda5c07b1fe4
git bisect good 9625329ea5a7e3e8475cd21c07726beec20573bd
# bad: [bd69ac0d0cbd6343f9cbc738c2a9982f1a738029] source-hash-74f53711fa7e54c4d449912be53c50eebb002451
git bisect bad bd69ac0d0cbd6343f9cbc738c2a9982f1a738029
# good: [e344c382af903faf613257a9d54f86617ae464c9] source-hash-ae78e3e913f39e2cc6d2b6f83f38c2ea225ab53e
git bisect good e344c382af903faf613257a9d54f86617ae464c9

So, the commit range to look at is http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=ae78e3e913f39e2cc6d2b6f83f38c2ea225ab53e..74f53711fa7e54c4d449912be53c50eebb002451
Comment 4 Korrawit Pruegsanusak 2012-05-30 04:23:32 UTC
@mmeeks: Unfortunately your commit is related to this bug. Could you please have a look? Thanks!

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8e95736e3a92292763ff7fe619bbd8de327c9c33
Comment 5 Rainer Bielefeld Retired 2013-02-24 18:57:33 UTC
Still [Reproducible] with parallel Dev-installation of  "Version 4.1.0.0.alpha0+ (Build ID: fd56eb98e63b4aac12c9633d5847a3fb964f326) TinderBox: Win-x86@6, Branch:master, Pull Time: 2013-02-22_21:43:36" ENGLISH UI / German Locale  on German WIN7 Home Premium (64bit) with LODev/4 Masters User Profile

@ Michael:
Can you please check due to comment 4?
Comment 6 Michael Meeks 2013-02-25 17:25:12 UTC
Created attachment 75516 [details]
selection is far too faint if there at all ...

We have different glue-point images we render on selection, but it -looks- as if they are incredibly faint - either that or we're not selecting them.

Top and bottom are un-selected and selected: spot the difference.
Comment 7 Not Assigned 2013-02-25 21:54:41 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8d34984116c0841748ae47afa667877dc1b5a444

fdo#45879 - fix selected gluepoint rendering.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Meeks 2013-02-25 21:57:55 UTC
Thanks so much for the chasing here - after much investiation the fix turned out to be really obvious ;-) [ at least when you know what the problem is ].
Comment 9 sasha.libreoffice 2013-02-26 05:26:12 UTC
Thanks for fixing this bug
Comment 10 Not Assigned 2013-02-26 10:44:32 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9a4cef83c386199f740c85350da2bb53a7b3aa96&h=libreoffice-4-0

fdo#45879 - fix selected gluepoint rendering.


It will be available in LibreOffice 4.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Not Assigned 2013-02-26 10:51:32 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8c57b0322560f1f005ead9e43fb86f3bcbb0b365&h=libreoffice-3-6

fdo#45879 - fix selected gluepoint rendering.


It will be available in LibreOffice 3.6.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Not Assigned 2013-02-26 12:19:02 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-4-0-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=37b7289a84b0cc0f84e099129135556d89b953fc&h=libreoffice-4-0-1

fdo#45879 - fix selected gluepoint rendering.


It will be available already in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Rainer Bielefeld Retired 2013-04-10 05:45:15 UTC
Modified Assignee due to facts to ease finding of experts via Bugzilla