fdo#45879 - fix selected gluepoint rendering.

Store the glue-point bitmap at a unique index in maRealMarkers for re-use.

Change-Id: I2cd5b240619502dfc8634eca331f4163e5bd5ca8